--- a/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -184,13 +184,16 @@
           <span class="text-blu">Edit </span>
         </button>
       </div>
-      <div *ngIf="editingSectorsOfInterest">
+      <div
+        *ngIf="editingSectorsOfInterest"
+        class="d-flex justify-content-center justify-content-md-start"
+      >
         <form
           [formGroup]="sectorsOfInterestForm"
           (ngSubmit)="saveSectorsOfInterest()"
           class="d-flex flex-column"
         >
-          <div class="input-wrapper mx-auto">
+          <div class="input-wrapper">
             <select
               class="input-box bg-background"
               formControlName="sectorsOfInterestId"
@@ -215,7 +218,7 @@
               </ng-container>
             </div>
           </div>
-          <div class="d-flex mx-auto">
+          <div class="d-flex justify-content-center">
             <button
               type="submit"
               class="custom-button button-small border-blu me-2"
@@ -233,7 +236,7 @@
         </form>
       </div>
     </div>
-    <div class="col-10 col-md-7 mt-3 mt-md-0 d-flex mx-auto mb-5 mb-md-0">
+    <div class="col-10 col-md-7 mt-5 mt-md-0 d-flex mx-auto mb-5 mb-md-0">
       <div class="mx-md-auto">
         <button
           type="button"
@@ -245,7 +248,7 @@
         <div>
           <small
             ><small class="text-rosso">PLEASE NOTE: </small> All your data will
-            be deleted</small
+            be deleted!</small
           >
         </div>
       </div>
