--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="form" (ngSubmit)="onFilter()">
     <div class="row">
       <div
-        class="col-12 col-md-6 col-lg-3 d-flex justify-content-center justify-content-lg-start mt-3"
+        class="col-12 col-md-6 col-lg-3 d-flex justify-content-center justify-content-lg-start mt-5 mt-md-5"
       >
         <div class="input-wrapper">
           <select
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div
-        class="col-12 col-md-6 col-lg-3 d-flex justify-content-center justify-content-lg-start mt-3"
+        class="col-12 col-md-6 col-lg-3 d-flex justify-content-center justify-content-lg-start mt-2 mt-md-5"
       >
         <div class="input-wrapper">
           <select
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div
-        class="col-12 col-md-12 col-lg-6 d-flex justify-content-center justify-content-lg-start mt-3"
+        class="col-12 col-md-12 col-lg-6 d-flex justify-content-center justify-content-lg-start mt-3 mt-lg-5"
       >
         <button class="custom-button button-small border-blu">
           <span class="text-blu"> Filter </span>
@@ -45,7 +45,7 @@
     </div>
   </form>
 
-  <div class="row mt-4">
+  <div class="row mt-4 internal-container">
     <div
       *ngFor="let professional of professionals"
       class="col-10 col-sm-6 col-md-4 col-lg-3 mt-5 mx-auto mx-sm-0 mb-5"
@@ -55,7 +55,7 @@
 
     <div
       *ngIf="pageable.totalElements != 0"
-      class="col-12 mt-5 d-flex justify-content-end"
+      class="col-12 mt-5 d-flex justify-content-end position-absolute bottom-0"
     >
       <ngb-pagination
         [collectionSize]="pageable.totalElements || 0"
