--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -72,10 +72,7 @@
   </form>
 </div>
 
-<div
-  *ngIf="toastMessage"
-  class="toast-container shadow-lg position-fixed top-0 end-0 m-3"
->
+<div *ngIf="toastMessage" class="toast-container shadow-lg position-fixed">
   <div
     class="toast show rounded-0 border-0"
     role="alert"
