--- a/src/app/pages/professional-dashboard/professional-dashboard.component.html
+++ b/src/app/pages/professional-dashboard/professional-dashboard.component.html
@@ -564,10 +564,7 @@
   </div>
 </div>
 
-<div
-  *ngIf="toastMessage"
-  class="toast-container shadow-lg position-fixed top-0 end-0 m-3"
->
+<div *ngIf="toastMessage" class="toast-container shadow-lg position-fixed">
   <div
     class="toast show rounded-0 border-0"
     role="alert"
