changed few details

--- a/src/app/auth/register-professional/register-professional.component.html
+++ b/src/app/auth/register-professional/register-professional.component.html
@@ -127,7 +127,7 @@
                 class="hidden-input"
               />
 
-              <button class="custom-button border-blu">
+              <button class="custom-button border-blu" type="button">
                 <label class="text-blu" for="profilePicture">Choose it</label>
               </button>
             </div>
