--- a/src/app/auth/register-student/register-student.component.html
+++ b/src/app/auth/register-student/register-student.component.html
@@ -124,7 +124,7 @@
                 class="hidden-input"
               />
 
-              <button class="custom-button border-blu">
+              <button class="custom-button border-blu" type="button">
                 <label class="text-blu" for="profilePicture">Choose it</label>
               </button>
             </div>
