--- a/src/styles.scss
+++ b/src/styles.scss
@@ -175,7 +175,7 @@ select::placeholder {
 }
 
 .pagination .page-item.active .page-link {
-  background-color: #a9edc4;
+  background-color: #f3ebe2;
   border-color: #035476ee;
   outline: none;
   box-shadow: none;
