--- a/src/app/pages/professional-dashboard/professional-dashboard.component.scss
+++ b/src/app/pages/professional-dashboard/professional-dashboard.component.scss
@@ -1,3 +1,12 @@
+@media (max-width: 768px) {
+  .blob {
+    background-image: url(/blob.png);
+    background-size: 325px;
+    background-repeat: no-repeat;
+    background-position: bottom;
+  }
+}
+
 @media (min-width: 768px) {
   img {
     max-width: 350px;
@@ -34,6 +43,13 @@
     border-radius: 6px;
     border: 2px solid #035476ee;
   }
+
+  .blob {
+    background-image: url(/blob.png);
+    background-size: 303px;
+    background-repeat: no-repeat;
+    background-position: bottom;
+  }
 }
 
 @media (max-width: 996px) {
@@ -46,5 +62,23 @@
     height: auto;
     border-radius: 6px;
     border: 2px solid #035476ee;
+  }
+}
+
+@media (min-width: 996px) {
+  .blob {
+    background-image: url(/blob.png);
+    background-size: 405px;
+    background-repeat: no-repeat;
+    background-position: bottom;
+  }
+}
+
+@media (min-width: 1200px) {
+  .blob {
+    background-image: url(/blob.png);
+    background-size: 500px;
+    background-repeat: no-repeat;
+    background-position: bottom -20px left -3px;
   }
 }
