--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,7 +1,14 @@
 <div class="card mx-auto">
   <div class="card-content">
     <div class="card-photo">
-      <img class="" src="{{ professional.appUser.profilePicture }}" alt="" />
+      <img
+        src="{{
+          professional.appUser.profilePicture
+            ? professional.appUser.profilePicture
+            : 'user.png'
+        }}"
+        alt="Immagine di profilo"
+      />
     </div>
     <div class="card-details mt-3">
       {{ professional.appUser.name }} {{ professional.appUser.surname }}
