--- a/src/app/pages/favourite/favourite.component.html
+++ b/src/app/pages/favourite/favourite.component.html
@@ -1,15 +1,16 @@
 <div class="container">
-  <div class="row mt-5 internal-container">
+  <div class="row mt-5">
     <div
       *ngFor="let professional of professionals"
       class="col-10 col-sm-6 col-md-4 col-lg-3 mt-5 mx-auto mx-sm-0 mb-5"
     >
       <app-card [professional]="professional"></app-card>
     </div>
-
+  </div>
+  <div class="row">
     <div
-      *ngIf="pageable.totalElements != 0"
-      class="col-12 mt-5 d-flex justify-content-end position-absolute bottom-0"
+      *ngIf="pageable.totalPages > 1"
+      class="col-12 my-5 d-flex justify-content-center"
     >
       <ngb-pagination
         [collectionSize]="pageable.totalElements || 0"
