--- a/src/app/pages/professional-dashboard/professional-dashboard.component.html
+++ b/src/app/pages/professional-dashboard/professional-dashboard.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <div class="row align-items-start">
-    <div class="col-10 col-md-5 mx-auto mt-5 mt-md-0 order-1 order-md-0 blob">
+    <div
+      class="col-10 col-md-5 mx-auto mt-5 mt-md-0 order-1 order-md-0"
+      [class.blob]="!editingPhoto"
+    >
       <div
         *ngIf="!editingPhoto"
         class="d-flex img-container justify-content-center justify-content-md-start"
@@ -12,7 +15,9 @@
           <div>
             <img
               [src]="
-                professional?.appUser?.profilePicture || user?.profilePicture
+                professional?.appUser?.profilePicture ||
+                (isOwner ? user?.profilePicture : null) ||
+                '/user.png'
               "
             />
           </div>
@@ -237,7 +242,7 @@
     </div>
   </div>
 
-  <div class="row second-row">
+  <div class="row mt-3">
     <!-- Colonna Percorso Formativo -->
     <div class="col-10 col-md-6 mx-auto mt-5 mt-md-0">
       <div
@@ -414,7 +419,7 @@
     </div>
   </div>
 
-  <div class="row third-row mt-5">
+  <div class="row mt-5">
     <!--   colonna Written Story -->
     <div class="col-10 col-md-6 mx-auto">
       <div
@@ -540,10 +545,10 @@
       </div>
     </div>
   </div>
-  <div class="row my-5 my-md-0 mb-md-5">
+  <div class="row my-5">
     <div
       *ngIf="isOwner"
-      class="col-10 col-md-12 mt-3 mt-md-0 d-flex justify-content-start mx-auto"
+      class="col-10 col-md-12 mt-md-0 d-flex justify-content-start mx-auto"
     >
       <div>
         <button
