--- a/src/app/pages/favourite/favourite.component.html
+++ b/src/app/pages/favourite/favourite.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row mt-5">
+    <h3 class="fw-light text-center mb-5">Your Favourites</h3>
     <div
       *ngFor="let professional of professionals"
       class="col-10 col-sm-6 col-md-4 col-lg-3 mt-5 mx-auto mx-sm-0 mb-5"
